app/assets/stylesheets/videos.scss
/* ... */
.forward-button {
    height: 36px;
    margin-right: 34px;
    cursor: pointer;
}

#search-input{
    margin-left: 20px;
}

.reverse-button {
    height: 36px;
    margin-right: 32px;
    cursor: pointer;
}

.fa-compress {
    color: white;
    font-size: 31px;
    margin-right: 4px;
    -webkit-transition: color 300ms;
    -o-transition: color 300ms;
    transition: color 300ms;
    cursor: pointer;
}

.movie-title {
    font-size: 17px;
    
    color: grey;
    font-weight: 500;
}

#log-out-modal{
    opacity: 0;
    height: 50px;
    width: 75px;
    margin-top: 85px;
}

#play-button{
    cursor: pointer;
}

.bottom-row{
    
    width: 70%;
    
    height: 10%;
 
    bottom: 15px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    position: absolute;
    opacity: "0";
}

.scroll-bar-container{
    width: 100%;
    
}



.index-item{
    
    height: 150px;
    width: 550px;
    list-style: none;
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    
}



.index-item img {
    height: 150px;
    width: 100%;
    
}

.videos-index-body{
    
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    background-color: #141414;
}

#video-player{
    height: 90%;
    width: 90%;
}

.video-row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    width: 95%;
    
    margin-top: 15px;
    margin-bottom: 25px;
    
}

.video-player-div-bottom{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    height: 80%;
}

.video-player-div-top {
    height: 10%;

}
.video-player-div-top a {
    text-decoration: none;
}

#log-out-arrow {
    background-color: black;
    border: none;
    cursor: pointer;
}

.movie-arrow{
 
    color: white;
    position: absolute;
    cursor: pointer;
    display: none;
    opacity: 0;
    margin-top: 130px;
    margin-left: 45%;
    
    
}

.hidden-panel {
    display: none;
    -o-text-overflow: ellipsis;
       text-overflow: ellipsis;
    word-wrap: break-word;
    overflow: hidden;
}



.video-row-inner {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    width: 100vw;
    height: 200px;
}

.links-row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    height: 200px;
    width: 100%;
    position: relative;

}

.featured-video-div {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    width: 100vw;
    // height: 90vh;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    margin-top: 15px;
    margin-bottom: 80px;
    
}

.top-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 200px;

}

#featured-video{
    width: 90%;
  
}

.featured-video-h1 {
    color: white;
    font-weight: 800;
    font-size: 60px;
    text-shadow: 1px 1px 1px #0f0f0f;
 
}

.index-h1 {
    color: white;
    font-weight: 700;
    font-size: 38px;
    text-shadow: 1px 1px 1px #0f0f0f;
    padding-left: 15px;
    padding-bottom: 10px;
}

.featured-video-h4 {
    color: white;
    font-weight: 200;
    font-size: 24px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
}

.featured-video-h3 {
    color: white;
    font-weight: 200;
    font-size: 24px;
    overflow: hidden;
}

.left-show-div a {
    position: absolute;
    top: 15px;
    left: 15px;
}

.hidden-video-h1 {
    color: white;
    font-weight: 500;
    font-size: 4em;
    position: absolute;
    z-index: 10;
    white-space: nowrap;
    top: 55px;
    left: 15px;
}

.hidden-video-h3 {
    color: white;
    font-weight: 200;
    font-size: 24px;
    position: absolute;
    top: 140px;
    left: 12px;
    width: 90%;
   
}

.featured-video-title-div {
    top:35vh;
    z-index: 3;
    position: absolute;
    left: 25vw;
}

.featured-mute-div {
    top:30vh;
    z-index: 3;
    position: absolute;
    right: 15vw;
}

.arrow-div {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    top: 0;
    position: absolute;
    height: 100%;
    width: 100%;
}

.duration{
    color: white;
    padding-left: 10px;
}

#scroll-bar {
    width: 100%;
    height: 25px;
    cursor: pointer;
}
/* ... */

